Alterando nome dos arquivos e configs.

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name": "angular-file-upload-br",
     "version": "1.1.15br",
     "homepage": "https://github.com/mateusmcg/angular-file-upload-br",
-    "description": "Angular File Upload is a module for the AngularJS framework",
+    "description": "Angular File Upload é um módulo para o framework AngularJS",
     "author": {
-        "name": "nerv",
+        "name": "mateusmcg",
         "url": "https://github.com/mateusmcg"
     },
     "dependencies": {
