--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-    "name": "angular-file-upload",
-    "main": "angular-file-upload.js",
-    "homepage": "https://github.com/nervgh/angular-file-upload",
+    "name": "angular-file-upload-br",
+    "main": "angular-file-upload-br.js",
+    "homepage": "https://github.com/mateusmcg/angular-file-upload-br",
     "ignore": ["examples"],
     "dependencies": {
         "angular": "~1.2.11",
