--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "angular-file-upload-br",
-    "version": "1.1.15br",
+    "version": "1.0.0",
     "homepage": "https://github.com/mateusmcg/angular-file-upload-br",
     "description": "Angular File Upload é um módulo para o framework AngularJS",
     "author": {
