--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,9 @@
 {
     "name": "angular-file-upload-br",
+    "version": "1.0.0",
     "main": "angular-file-upload-br.js",
     "homepage": "https://github.com/mateusmcg/angular-file-upload-br",
-    "ignore": ["examples"],
+    "ignore": [ "examples" ],
     "dependencies": {
         "angular": "~1.2.11",
         "es5-shim": ">=3.4.0"
