--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-    "name": "angular-file-upload-br",
+    "name": "angular-file-upload-interceptor",
     "version": "1.0.0",
-    "main": "angular-file-upload-br.js",
-    "homepage": "https://github.com/mateusmcg/angular-file-upload-br",
+    "main": "angular-file-upload-interceptor.js",
+    "homepage": "https://github.com/mateusmcg/angular-file-upload-interceptor",
     "ignore": [ "examples" ],
     "dependencies": {
         "angular": "~1.2.11",
