--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "angular-file-upload-br",
+    "name": "angular-file-upload-interceptor",
     "version": "1.0.0",
-    "homepage": "https://github.com/mateusmcg/angular-file-upload-br",
+    "homepage": "https://github.com/mateusmcg/angular-file-upload-interceptor",
     "description": "Angular File Upload é um módulo para o framework AngularJS",
     "author": {
         "name": "mateusmcg",
